--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.10.0",
-    "react": "^16.6.3",
+    "react": "^15.6.1",
     "react-color": "^2.14.1",
-    "react-dom": "^16.6.3",
+    "react-dimensions": "^1.3.1",
+    "react-dom": "^15.6.1",
     "react-scripts": "2.1.1",
-    "three": "^0.99.0",
+    "react-three-renderer": "^3.2.4",
+    "three": "^0.86.0",
     "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
