--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "controlled-cubes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://walker-j.github.io/controlled-cubes",
   "dependencies": {
     "@blueprintjs/core": "^3.10.0",
     "react": "^15.6.1",
@@ -14,6 +15,8 @@
     "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
